--- a/src/index.html
+++ b/src/index.html
@@ -2,27 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>Page title</title>
   </head>
   <body>
     <div class="form-container">
-    <form class="search-form" id="search-form">
-  <input
-    type="text"
-    name="searchQuery"
-    autocomplete="off"
-    placeholder="Search images..."
-  />
-  <button type="submit"><i class="fa fa-search"></i></button>
-</form>
-</div>
-<div class="gallery"></div>
-<button type="button" class="load-more hidden">Load more</button>
-<button class="btn-up btn-up_hide"></button>
+      <form class="search-form" id="search-form">
+        <input class="input type="text" name="searchQuery" autocomplete="off"
+        placeholder="Search images..." />
+        <button type="submit"><i class="fa fa-search"></i></button>
+      </form>
+    </div>
+    <div class="gallery"></div>
+    <button type="button" class="load-more hidden">Load more</button>
+    <button class="btn-up btn-up_hide"></button>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
